@@ -1,11 +1,12 @@
 #
-# $Id: Makefile.am,v 1.5 2002/04/10 07:33:07 lecroart Exp $
+# $Id: Makefile.am,v 1.6 2002/06/12 10:21:02 lecroart Exp $
 #
 
 MAINTAINERCLEANFILES  = Makefile.in
 
-EXTRA_DIST		       = admin_service.cfg \
-				 admin_service.dsp
+EXTRA_DIST            =	common.cfg \
+			admin_service.cfg \
+			admin_service.dsp
 
 sbin_PROGRAMS         = admin_service
 
