@@ -1,6 +1,8 @@
 // link the common configuration file
 RootConfigFilename = "common.cfg";
 
+DisplayedVariables += { "", "@Shards|shards", "@RegUsers|registeredUsers", "@OnlineUsers|onlineUsers" };
+
 Port = 49999;	// port for the client connection (default is 49999)
 
 WSPort = 49998;	// port for the welcome connection (default is 49998)
