@@ -1,2 +1,4 @@
 // link the common configuration file
 RootConfigFilename = "common.cfg";
+
+DisplayedVariables += { "", "@Services|nsServices" };
