@@ -1,6 +1,8 @@
 // link the common configuration file
 RootConfigFilename = "common.cfg";
 
+DisplayedVariables += { "", "@OnlineFS|frontends", "@OnlineUsers|users", "NbOnlineUsers|OnlineUsersNumber" };
+
 // address of the login service
 LSHost = "localhost";
 
