@@ -1,3 +1,8 @@
+June 12 2002
+============
+
+*  NLNET: Added custumizable command with button using DisplayedVariables in the config file.
+
 June 6 2002
 ===========
 
